# Perastage

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.md  help.md  main.cpp  perastage_tree.md  setup.sh  setup_windows.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
cmake/: PerastageCopySymbols.cmake
core/: CMakeLists.txt  autopatcher.cpp  autopatcher.h  configmanager.cpp  configmanager.h  configservices.cpp  configservices.h  credentialstore.cpp  credentialstore.h  gdtfdictionary.cpp  gdtfdictionary.h  gdtfnet.cpp  gdtfnet.h  guiconfigservices.cpp  guiconfigservices.h  layoutviewpresets.cpp  layoutviewpresets.h  logger.cpp  logger.h  markdown.cpp  markdown.h  matrixutils.h  patchmanager.cpp  patchmanager.h  pdftext.cpp  pdftext.h  projectutils.cpp  projectutils.h  riderimporter.cpp  riderimporter.h  scenedatamanager.cpp  scenedatamanager.h  simplecrypt.cpp  simplecrypt.h  stringutils.h  trussdictionary.cpp  trussdictionary.h  trussloader.cpp  trussloader.h  uuidutils.cpp  (+1 more)
core/layouts/: LayoutCollection.cpp  LayoutCollection.h  LayoutManager.cpp  LayoutManager.h
core/print/: PageSetup.cpp  PageSetup.h  PlanPrintSettings.cpp  PlanPrintSettings.h  Viewer2DPrintSettings.cpp  Viewer2DPrintSettings.h
docs/: El_Bonillo_AQO_2025_v1.mvr  Gasteiz iluminación 2025.mvr  architecture.md  code_health_review_2026-02-13.md  configmanager_refactor_audit.md  pdfparser.cpp  print-plan-options.md  print-viewer2d-options.md  printing-plan-fix.md  printing-viewer2d-fix.md  rider_benchmark.md
gui/: AGENTS.md  CMakeLists.txt  addfixturedialog.cpp  addfixturedialog.h  addressdialog.cpp  addressdialog.h  colorfulrenderers.h  colorstore.h  columnselectiondialog.cpp  columnselectiondialog.h  columnutils.h  consolepanel.cpp  consolepanel.h  dictionaryeditdialog.cpp  dictionaryeditdialog.h  exportfixturedialog.cpp  exportfixturedialog.h  exportobjectdialog.cpp  exportobjectdialog.h  exporttrussdialog.cpp  exporttrussdialog.h  fixtureeditdialog.cpp  fixtureeditdialog.h  fixturepatchdialog.cpp  fixturepatchdialog.h  fixturepreviewpanel.cpp  fixturepreviewpanel.h  fixturetablepanel.cpp  fixturetablepanel.h  gdtfsearchdialog.cpp  gdtfsearchdialog.h  hoisttablepanel.cpp  hoisttablepanel.h  layerpanel.cpp  layerpanel.h  layout2dviewdialog.cpp  layout2dviewdialog.h  layouteventtabledialog.cpp  layouteventtabledialog.h  layoutimageutils.cpp  (+56 more)
gui/fixturetable/: fixture_table_columns.cpp  fixture_table_columns.h  fixture_table_edit_service.cpp  fixture_table_edit_service.h  fixture_table_parser.cpp  fixture_table_parser.h
licenses/: Lucide-MIT.txt  stb_easy_font_LICENSE.txt
models/: fixture.cpp  fixture.h  layer.cpp  layer.h  matrixutils.h  mvrscene.cpp  mvrscene.h  sceneobject.cpp  sceneobject.h  support.h  truss.cpp  truss.h  types.h
mvr/: AGENTS.md  mvrexporter.cpp  mvrexporter.h  mvrimporter.cpp  mvrimporter.h
peraviz/: project.godot  test.gd  test.tscn
peraviz/docs/: NATIVE_BUILD.md  USED_LIBS.md
peraviz/native/: CMakeLists.txt
peraviz/native/src/: asset_cache.cpp  asset_cache.h  gdtf_scene_builder.cpp  mesh_3ds_loader.cpp  mesh_3ds_loader.h  mvr_scene_loader.cpp  mvr_scene_loader.h  peraviz_loader.cpp  peraviz_loader.h  register_types.cpp  scene_model.h
peraviz/scripts/: editor_camera.gd  load_scene.gd
render/: camera.h  glviewport.cpp  glviewport.h  gridoverlay.cpp  gridoverlay.h  irenderviewport.h  vulkanviewport.cpp  vulkanviewport.h
resources/: Perastage.rc
resources/icons/: icons-usage.json
tests/: CMakeLists.txt  autopatcher_grouping_test.cpp  autopatcher_test.cpp  autopatcher_universe_wrap_test.cpp  check_no_configmanager_get_in_gui.sh  check_perastage_tree_modules.sh  consolepanel.h  consolepanel_stub.cpp  fixture_table_parser_test.cpp  gdtfloader.h  gdtfloader_onech_stub.cpp  gdtfloader_primitive_test.cpp  gdtfloader_stub.cpp  history_manager_test.cpp  layer_visibility_state_test.cpp  matrixutils_test.cpp  mvr_dmx_address_test.cpp  mvr_exporter_compliance_test.cpp  pdf_font_metrics_test.cpp  pdf_text_test.cpp  pdf_writer_test.cpp  pdftext_stub.cpp  project_session_io_test.cpp  project_session_test.cpp  rider_autopatch_test.cpp  rider_import_benchmark.cpp  rider_import_fixtureid_test.cpp  rider_import_order_test.cpp  rider_layer_mode_test.cpp  rider_save_roundtrip_test.cpp  riderimporter_stubs.cpp  save_load_roundtrip_test.cpp  selection_state_test.cpp  stringutils_test.cpp  trussloader_stub.cpp  user_preferences_store_test.cpp
tests/data/: rider_fixture_order.txt  rider_fixtureid_basic.txt  rider_fixtureid_over100.txt  rider_large.txt  rider_layer_mode.txt  simple.txt  translated.txt
viewer2d/: AGENTS.md  CMakeLists.txt  canvas2d.cpp  canvas2d.h  layout2dviewpanel.cpp  layout2dviewpanel.h  planpdfexporter.cpp  planpdfexporter.h  print_diagnostics.cpp  print_diagnostics.h  render2d_common.cpp  render2d_common.h  symbolcache.cpp  symbolcache.h  viewer2dcommandrenderer.cpp  viewer2dcommandrenderer.h  viewer2doffscreenrenderer.cpp  viewer2doffscreenrenderer.h  viewer2dpanel.cpp  viewer2dpanel.h  viewer2dpdfexporter.cpp  viewer2dpdfexporter.h  viewer2drenderpanel.cpp  viewer2drenderpanel.h  viewer2dstate.cpp  viewer2dstate.h
viewer2d/pdf/: font_metrics.cpp  font_metrics.h  layout_pdf_exporter.cpp  layout_pdf_exporter.h  pdf_draw_commands.cpp  pdf_draw_commands.h  pdf_font_metrics.cpp  pdf_font_metrics.h  pdf_graphics_encoder.cpp  pdf_graphics_encoder.h  pdf_objects.cpp  pdf_objects.h  pdf_writer.cpp  pdf_writer.h
viewer3d/: AGENTS.md  CMakeLists.txt  gdtfloader.cpp  gdtfloader.h  loader3ds.cpp  loader3ds.h  loaderglb.cpp  loaderglb.h  mesh.h  meshprimitives.cpp  meshprimitives.h  viewer3d_types.h  viewer3dcamera.cpp  viewer3dcamera.h  viewer3dcontroller.cpp  viewer3dcontroller.h  viewer3dpanel.cpp  viewer3dpanel.h
viewer3d/culling/: bounds_cache_system.cpp  bounds_cache_system.h  visibilitysystem.cpp  visibilitysystem.h
viewer3d/interfaces/: irendercontext.h  iselectioncontext.h  ivisibilitycontext.h
viewer3d/labels/: label_render_system.cpp  (+1 more)
(+29 files in other folders)
